--- a/自己整理给自己的语法.md
+++ b/自己整理给自己的语法.md
@@ -120,7 +120,7 @@ _效果_
 
 #### 以上是小白暂时整理的内容，只是我用到的最频繁的语法
 **有待后续补充**  
-完整语法请看链接  
+完整语法请看链接 : [magic link](https://www.appinn.com/markdown/basic.html)
 
  
 
