--- a/自己整理给自己的语法.md
+++ b/自己整理给自己的语法.md
@@ -106,7 +106,7 @@ I get 10 times more traffic from [Google][1] than from
 
 ### 5.代码
 
-在一般的段落文字中，你可以使用反引号 ` 来标记代码区段，或者缩进四个空格或一个Tab  
+在一般的段落文字中，你可以使用反引号 " \` "来标记代码区段，或者缩进四个空格或一个Tab  
 
 这个比较简单，就不举例了。  	
 
@@ -122,10 +122,13 @@ _效果_
 <br/>
 
 ### 7.引用  
-	用" > " 加空格加引用文字  
-	这个也不举例了吧。  
-	想看直接看这篇文章的markdown语法，在这篇文章中有很多应用。  
-	~~其实是因为懒~~
+
+用" > " 加空格加引用文字  
+这个也不举例了吧。  
+想看直接看这篇文章的markdown语法，在这篇文章中有很多应用。   
+~~其实是因为懒~~
+（这是题外话，发现一个很有趣的现象，在“ --- ”也就是分隔行上的字会变大）
+
 ---
 
 #### 以上是小白暂时整理的内容，只是我用到的最频繁的语法
