--- a/自己整理给自己的语法.md
+++ b/自己整理给自己的语法.md
@@ -96,6 +96,9 @@ I get 10 times more traffic from [Google][1] than from
 [1]: http://google.com/ "Google"     
 [2]: http://search.yahoo.com/ "Yahoo Search"    
 [3]: http://search.msn.com/ "MSN Search"  
+
+在Markdown里插入图片类似：　　
+\[name\](图片地址,支持网络地址，也能使用本地地址)　　
   
   
  <br/>
